@@ -1,4 +1,8 @@
-($Id: ChangeLog,v 1.35 2001-05-09 13:35:40 rufustfirefly Exp $)
+($Id: ChangeLog,v 1.36 2001-05-22 13:35:26 rufustfirefly Exp $)
+
+2001-05-22  jeff b  <jeff@univrel.pr.uconn.edu>
+	* configure.in, etc/afpd/unix.h: more portability fixes, and
+	integration of Tru64 build fix from Edmund Lam <epl@unimelb.edu.au>
 
 2001-05-09  jeff b  <jeff@univrel.pr.uconn.edu>
 	* autogen.sh: added automake --include-deps to autogen.sh to
